<resources>

    <string name="app_name">xian_pm25</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="collect">N/A</string>
    <string name="Homepage">Homepage</string>
    <string name="answer">answer</string>
	<string name="get_data_succeed">get_data_succeed</string>
	<string name="get_data_error">get_data_error</string>
	
	<string name="update_url">update</string>
	<string name="geting_date">Getting date…</string>
	
	<string name="city_name">CityName</string>
	<string name="pollutant_SO2">SO2:</string>
	<string name="pollutant_NO2">NO2:</string>
	<string name="pollutant_PM10">PM10:</string>
	<string name="pollutant_CO">CO:</string>
	<string name="pollutant_O3_1">O3 1 hour:</string>
	<string name="pollutant_O3_8">O3 8 hour:</string>
	<string name="pollutant_PM25">PM2.5:</string>
	<string name="pollutant_state">pollutant_state：</string>
	<string name="pollutant_average">pollutant_average：</string>
	
	<string name="version_info">version info:</string>
	<string name="version">V0.8</string>
	<string name="about">about</string>
	<string name="copyright">copyright</string>

</resources>